--- a/app/scss/base/_variables.scss
+++ b/app/scss/base/_variables.scss
@@ -1,1 +1,20 @@
-//
+%roboto-condensed-regular {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 400;
+}
+
+%roboto-condensed-bold {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 700;
+}
+
+%roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+}
+
+$white-text: #fff;
+$black-text: #0b0b0b;
+$red-text: #b70021;
+$black-background: #0b0b0b;
+$red-background: #690102;
