--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,156 @@
-@import "base/variables";
-@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed:wght@400;700&display=swap");
-
-/* @import "libs/reset"; */
-@import url("https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/12.0.1/sanitize.min.css");
+@import 'base/variables';
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed:wght@400;700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/12.0.1/sanitize.min.css');
+@import 'libs/reset';
 
 /* @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"); */
-@import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css");
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css');
+
+.container {
+    margin: 0 auto;
+    padding: 0 15px;
+    max-width: 1230px;
+}
+
+body {
+    font-size: 24px;
+    line-height: 28px;
+    color: $white-text;
+    background-color: $black-background;
+
+    @extend %roboto-condensed-regular;
+}
+
+a {
+    text-decoration: none;
+    color: $white-text;
+}
+
+.header {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 5;
+    padding-top: 30px;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.3);
+
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__btn {
+        cursor: pointer;
+    }
+
+    &__btn.is-active {
+        transform: rotate(45deg);
+        transition: all 0.3s ease-in-out;
+        transition-delay: 0.6s;
+    }
+
+    &__btn.is-active .line:nth-child(2) {
+        width: 0;
+    }
+
+    &__btn.is-active .line:nth-child(1) {
+        transform: translateY(13px);
+    }
+
+    &__btn.is-active .line:nth-child(3) {
+        transform: translateY(-13px) rotate(90deg);
+    }
+
+    &__link {
+        display: inline-block;
+        margin-top: 8px;
+    }
+
+    .line {
+        display: block;
+        margin: 8px auto;
+        width: 50px;
+        height: 5px;
+        background-color: #ecf0f1;
+        transition: all 0.3s ease-in-out;
+    }
+
+    &__content {
+        margin-top: 30px;
+    }
+
+    &__content-title {
+        margin-bottom: 20px;
+        font-size: 96px;
+        line-height: 112px;
+
+        @extend %roboto-regular;
+    }
+
+    &__content-text {
+        margin-bottom: 25px;
+        width: 284px;
+    }
+
+    &__content-link {
+        display: inline-block;
+        border: 1px solid #fff;
+        padding: 30px 62px;
+        background: rgba(#fff, 0.15);
+        transition: all 0.5s;
+
+        @extend %roboto-condensed-bold;
+    }
+
+    &__content-link:hover {
+        background-color: $red-background;
+        transition: all 0.5s;
+    }
+
+    &__btn.is-active .line:nth-child(1),
+    &__btn.is-active .line:nth-child(3) {
+        transition-delay: 0.3s;
+    }
+}
+
+.slider {
+    &__item {
+        height: 100vh;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .slick-dots button {
+        outline: none;
+        border: none;
+        border-radius: 50%;
+        padding: 0;
+        width: 15px;
+        height: 15px;
+        font-size: 0;
+        background-color: $black-background;
+    }
+
+    .slick-dots .slick-active button {
+        background-color: $white-text;
+    }
+
+    .slick-dots li {
+        display: inline-block;
+        margin: 0 10px;
+    }
+
+    .slick-dots {
+        position: relative;
+        z-index: 6;
+        margin: -55px auto 0;
+        max-width: 1200px;
+    }
+
+    /* &__top {
+        position: relative;
+    } */
+}
