--- a/app/scss/base/_variables.scss
+++ b/app/scss/base/_variables.scss
@@ -1,15 +1,15 @@
 %roboto-condensed-regular {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
 }
 
 %roboto-condensed-bold {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: 700;
 }
 
 %roboto-regular {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
 }
 
