--- a/app/scss/blocks/_media.scss
+++ b/app/scss/blocks/_media.scss
@@ -1,8 +1,8 @@
 // X-Large devices (large desktops, less than 1400px)
-@media (max-width: 1399.98px) {}
+/* @media (max-width: 1399.98px) {} */
 
 // Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) {}
+/* @media (max-width: 1199.98px) {} */
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
@@ -93,8 +93,6 @@
             flex-direction: column-reverse;
         }
     }
-
-
 
     .footer {
         padding: 30px 0 20px;
